Agregado el contenido adicional del blog y una mejor tipografía

--- a/blogpost.html
+++ b/blogpost.html
@@ -19,6 +19,12 @@
                     increibles que se pueden hacer con
                     las ramas
                 </p>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                    At dignissimos temporibus placeat ea exercitationem dolor, 
+                    ut optio. Id placeat maxime, commodi sint sed a, voluptati
+                    bus laboriosam quisquam quasi ducimus explicabo.
+                </p>
             </div>
         </div>       
     </body>
